[project]
name = "poma-senter"
dynamic = ["version"]
description = "Sentence and line-level text cleaner for .poma and Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [{ name = "TIGON S.L.U.", email = "info@poma.science" }]
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "poma_senter.version.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
